fix configs