@@ -1,21 +1,18 @@
 plugins {
-    id "org.springframework.boot" version "$springBootVersion"
-    id "io.spring.dependency-management" version "${springDependencyManagement}"
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagement}"
     id 'java'
-    id "com.github.node-gradle.node" version "3.2.1"
+    id 'com.github.node-gradle.node' version "${githubNodeGradle}"
 }
 
 group = 'ngfs.servicewithkafka'
 version = "${applicationVersion}"
-//sourceCompatibility = JavaVersion.VERSION_13
 
 tasks.withType(JavaCompile) {
     options.encoding = "${sourceEncoding}"
-//    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.withType(JavaExec) {
-//    jvmArgs += "--enable-preview"
 }
 
 repositories {
@@ -49,7 +46,6 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-integration:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
     implementation "org.springframework.kafka:spring-kafka:${springKafkaVersion}"
-    implementation "org.springframework.cloud:spring-cloud-starter-kubernetes-config:${springCloudStarterKubernetesConfig}"
     implementation "javax.validation:validation-api:${javaxValidationVersion}"
     implementation("net.logstash.logback:logstash-logback-encoder:${logstashEncoderVersion}") { transitive = false }
     implementation "org.hibernate.validator:hibernate-validator:${hibernateVersion}"
@@ -94,6 +90,22 @@ task integrationTest(type: Test) {
     classpath = sourceSets.integrationTest.runtimeClasspath
 
     outputs.upToDateWhen { false }
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs "$buildDir/openapi-generated-src", "$buildDir/wsdl-generated-src"
+        }
+    }
+    integrationTest {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir file('src/integration-test/java')
+        }
+        resources.srcDir file("src/integration-test/resources")
+    }
 }
 
 node {
